--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Server Node | Express</title>
+    <style>
+        * {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1>Acceso denegado</h1>
+    <hr>
 </body>
 </html>
