--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Server Node | Express</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Google Sing-in</title>
     <style>
-        * {
-            text-align: center;
-        }
+      h1 {
+        text-align: center;
+      }
+
+       
     </style>
-</head>
-<body>
-    <h1>Acceso denegado</h1>
-    <hr>
-</body>
+  </head>
+  <body>
+    <h1>Google Sign-in</h1>
+    <hr />
+
+    <div
+      id="g_id_onload"
+      data-client_id="514129518939-qv6nfl0l0eqtc71fnart75neiodgiu22.apps.googleusercontent.com"
+      data-auto_prompt="false"
+      data-callback="handleCredentialResponse"
+    ></div>
+    <div
+      class="g_id_signin"
+      data-type="standard"
+      data-size="large"
+      data-theme="outline"
+      data-text="sign_in_with"
+      data-shape="rectangular"
+      data-logo_alignment="left"
+    ></div>
+
+    <button id="signout">Sign Out</button>
+
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+      function handleCredentialResponse(response) {
+
+        // Google Token: ID_TOKEN
+        const body = { id_token: response.credential };
+
+        console.log('id_token', body);
+
+        fetch('http://localhost:8080/api/auth/google', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(body)
+        })
+          .then( resp => resp.json() )
+          .then( resp => {
+            console.log(resp);
+            localStorage.setItem('mail', resp.usuario.correo)
+          } )
+          .catch( console.warn )
+      }
+
+      const button = document.getElementById('signout');
+
+      button.onclick = () => {
+        console.log(google.accounts.id);
+
+        google.accounts.id.disableAutoSelect();
+        google.accounts.id.revoke( localStorage.getItem('mail'), done => {
+          localStorage.clear();
+          location.reload();
+
+        } );
+      }
+    </script>
+  </body>
 </html>
