--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,26 @@
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
+      // function handleCredentialResponse(response) {
+
+      //   // Google Token: ID_TOKEN
+      //   const body = { id_token: response.credential };
+
+      //   console.log('id_token', body);
+
+      //   fetch('http://localhost:8080/api/auth/google', {
+      //     method: 'POST',
+      //     headers: {
+      //       'Content-Type': 'application/json'
+      //     },
+      //     body: JSON.stringify(body)
+      //   })
+      //     .then( resp => resp.json() )
+      //     .then( resp => {
+      //       localStorage.setItem('mail', resp.usuario.correo)
+      //     } )
+      //     .catch( console.warn )
+      // }
       function handleCredentialResponse(response) {
 
         // Google Token: ID_TOKEN
