Fin Seccion 11 -version 4.0.0

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 
         console.log('id_token', body);
 
-        fetch('http://localhost:8080/api/auth/google', {
+        fetch('https://dashboard.render.com/api/auth/google', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
