--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
         console.log('id_token', body);
 
-        fetch('http://localhost:8080/api/auth/google', {
+        fetch('https://rest-server-crud.onrender.com/api/auth/google', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
