--- a/public/index.html
+++ b/public/index.html
@@ -48,19 +48,6 @@
       function handleCredentialResponse(response) {
         // Google Token: ID_TOKEN
         const body = { id_token: response.credential }
-        //   fetch('https://rest-server-crud.onrender.com/api/auth/google', {
-        //     method: 'POST',
-        //     headers: {
-        //       'Content-Type': 'application/json'
-        //     },
-        //     body: JSON.stringify(body)
-        //   })s
-        //     .then( resp => resp.json() )
-        //     .then( resp => {
-        //       localStorage.setItem('mail', resp.usuario.correo)
-        //     } )
-        //     .catch( console.warn )
-        // }
 
         fetch("http://localhost:8080/api/auth/google", {
           method: "POST",
@@ -71,10 +58,12 @@
         }) // ESTO SE EJECUTA CUANDO VUELVE DEL CONTROLADOR
           .then((resp) => resp.json())
           .then((resp) => {
-            console.log({ resp })
+            console.log(resp)
             localStorage.setItem("mail", resp.usuario.correo);
           })
-          .catch(console.warn);
+          .catch(e => {
+            console.warn({e: e.message});
+          }); 
       }
 
       const button = document.getElementById("signout");
